force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/ucinn_ascendv2__AI_Chatbot_Resource__c.object-meta.xml
<CustomObject>
    <label>AI Chatbot Resource</label>
    <nameField>
        <label>AI Chatbot Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Chatbot Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>