force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/fields/ucinn_ascendv2__Is_Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Allow_Edit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Allow Edit</label>
    <type>Checkbox</type>
</CustomField>