force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/fields/ucinn_ascendv2__Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Resource_Id__c</fullName>
    <externalId>true</externalId>
    <label>Resource Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>