force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/fields/ucinn_ascendv2__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>