force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/fields/ucinn_ascendv2__Total_Subjects_Shown_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Subjects_Shown_Roll_Up__c</fullName>
    <label>Total Subjects Shown Roll Up</label>
    <summaryFilterItems>
        <field>ucinn_ascendv2__AI_Chatbot_Subject__c.ucinn_ascendv2__Is_Show_On_Chatbot__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__AI_Chatbot_Subject__c.ucinn_ascendv2__AI_Chatbot_Resource__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>