force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Resource__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Is_Allow_Edit__c</columns>
    <columns>ucinn_ascendv2__Resource_Name__c</columns>
    <columns>ucinn_ascendv2__Resource_Id__c</columns>
    <columns>ucinn_ascendv2__Total_Subjects_Shown_Roll_Up__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>